# rapidpro

./: .env  README.md  code_check.py  package.json  pip-freeze.txt  pip-requires.txt  pyproject.toml
.github/workflows/: build-push-develop.yaml  build-push-dnx.yaml  ci.yml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.varnish  Makefile  docker-compose.dev.yml  docker-compose.yml  nginx.site.conf  pip-freeze.txt  pip-requires.txt  pyproject.toml  start  varnish.vcl
docker/gunicorn/: gunicorn.conf.py
locale/en_US/LC_MESSAGES/: django.po
locale/es/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/pt_BR/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
static/examples/: sample_flows.json
static/fonts/icons/: selection.json  style.css
temba/: context_processors.py  context_processors_weni.py  oidc_authentication.py  settings.py.dev  settings.py.prod  settings_common.py  urls.py
temba/authentication/: apps.py  tests.py  urls.py  utils.py  views.py
temba/campaigns/: tests.py
temba/channels/: models.py
temba/classifiers/: tests.py
temba/contacts/: models.py
temba/flows/: views.py
temba/msgs/: models.py  tasks.py  tests.py  views.py
temba/orgs/: models.py  password_forget.py  tests.py  urls.py  views.py
temba/utils/: tests.py
templates/: frame.haml  weni_500.haml
templates/channels/: channel_claim.haml
templates/flows/: flow_editor_next.haml
templates/orgs/: org_create_login.haml  org_two_factor.haml  user_edit.haml
templates/two_factor/: _base.html  _wizard_actions.html
(+30 files in other folders)
